--- a/app/src/main/res/layout/layout_notes.xml
+++ b/app/src/main/res/layout/layout_notes.xml
@@ -20,11 +20,23 @@
         android:layout_marginRight="10dp"
         android:layout_marginBottom="15dp">
 
+        <ImageView
+            android:id="@+id/layout_notes_more"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:background="?android:attr/selectableItemBackground"
+            android:clickable="true"
+            android:focusable="true"
+            android:src="@drawable/ic_baseline_more_horiz_24" />
+
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_marginRight="5dp"
+            android:layout_toLeftOf="@id/layout_notes_more"
             android:orientation="vertical">
 
             <TextView
